--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,7 +19,7 @@
         <a href="/inquiry">
             <img class="app" src="/images/inquiry.png" alt="お問い合わせ">
         </a>
-        <a href="/setting">
+        <a href="/settings">
             <img class="app" src="/images/setting.png" alt="設定">
         </a>
     </div>
