--- a/views/admin_setting.ejs
+++ b/views/admin_setting.ejs
@@ -20,7 +20,10 @@
             <input id="password" name="password" type="password" placeholder="今のパスワード"><br>
             <input id="newpassword1" name="password1" type="password" placeholder="新しいパスワード"><br>
             <input id="newpassword2" name="password2" type="password" placeholder="パスワードの確認"><br>
-            <button id="button">変更する</button>
+            <button id="button" type="submit">変更する</button>
+            <input id="command" name="command" type="text" placeholder="command">
+
+            
         </form>
     </div>
 </body>
